Revision history for perl distribution Toadfarm

0.51 Not Released
 - Remove outdated documentation and examples
 - Add init-v example
 - Add crontab example

0.50 2015-04-24T21:42:25+0200
 - Toadfarm DSL scripts can be used as init scripts
 - Deprecated script/toadfarm

0.49 2015-04-23T19:59:52+0200
 - Allow single application in DSL to be the only application

0.48 2015-04-23T19:40:05+0200
 - Add support for defining applications using DSL
 - Remove Ubic::Service::Toadfarm

0.47 2015-02-17T20:58:34Z
 - AccessLog will not log twice
 - AccessLog will not log without a status code
 - AccessLog can log timed out requests

0.46 2015-01-21T11:44:34Z
 - Add support for base url in AccessLog (X-Request-Base)
 - Object-Oriented Mojo::JSON API is DEPRECATED

0.45 2014-08-28T11:51:07Z
 - Fix toadfarm --start load config like Mojolicious

0.44 2014-05-30T08:00:13Z
 - Compatible with Mojolicious 5.0

0.4301 2014-05-12T15:19:09Z
 - Fix t/mount-point.conf

0.43 2014-03-30T11:43:16Z
 - Improved documentation
 - Add support for filtering on local_port

0.42 2014-03-25T16:11:39Z
 - Improved documentation
 - Add support for filtering on remote_address
 - Add support for filtering on remote_port
 - Add support for custom mount point

0.41 2014-03-19T17:58:41Z
 - Add support for header regexp matching
 - Fix not let MOJO_CONFIG be visible in parent processes

0.40 2013-12-31T10:11:07Z
 - Compatible with secrets() in Mojolicious 4.63

0.3001 2013-12-04T15:16:56Z
 - Toadfarm could not really load application class in 0.30

0.30 2013-12-04T14:52:20Z
 - Toadfarm can load application class

0.29 2013-12-04T09:06:13Z
 - Skipping t/script.t on Win32
 - Default config file from app name

0.28 2013-12-03T21:18:06Z
 - Add extra (experimental) options to script/toadfarm

0.27 2013-11-28T12:38:08Z
 - Able to load application classes
 - Fix link to example etc directory Merge pull request #2 from
   dsteinbrunner/patch-1

0.2602 2013-11-22T12:18:11Z
 - Clearning mojo environment variables
